--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/reload"
+        android:title="@string/reload"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_reload_icon" />
+    <item
         android:id="@+id/settings"
         android:title="@string/settings"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_settings_icon"/>
-    <item
-        android:id="@+id/add_entry"
-        android:title="@string/add_entry"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_add_entry_icon"/>
+        android:icon="@drawable/ic_settings_icon" />
 
 </menu>
