--- a/app/src/main/res/layout/activity_detail_view.xml
+++ b/app/src/main/res/layout/activity_detail_view.xml
@@ -199,12 +199,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="50sp" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/delete_entry_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:scaleType="fitCenter"
                     android:layout_gravity="center"
-                    android:text="Delete Entry" />
+                    android:background="@null"
+                    android:src="@drawable/ic_delete_forever_icon" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
