--- a/app/src/main/res/layout/activity_detail_view.xml
+++ b/app/src/main/res/layout/activity_detail_view.xml
@@ -68,7 +68,8 @@
                             android:layout_alignParentEnd="true"
                             android:layout_marginEnd="5dp"
                             android:src="@drawable/ic_access_time_icon"
-                            android:background="@null" />
+                            android:background="@null"
+                            android:scaleType="fitCenter" />
 
                     </RelativeLayout>
 
@@ -201,8 +202,8 @@
 
                 <ImageButton
                     android:id="@+id/delete_entry_btn"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:scaleType="fitCenter"
                     android:layout_gravity="center"
                     android:background="@null"
