Black and white theming

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3F51B5</color>
-    <color name="primaryVariant">#2196F3</color>
-    <color name="onPrimary">#FFEB3B</color>
-    <color name="accent">#E91E63</color>
+    <color name="primary">#212121</color>
+    <color name="primaryVariant">#424242</color>
+    <color name="onPrimary">#EEEEEE</color>
+    <color name="accent">#000000</color>
 
     <color name="teal_700">#FF018786</color>
 
