--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,16 +8,57 @@
     android:gravity="center"
     android:id="@+id/settings_layout">
 
-
-    <Button
-        android:id="@+id/sign_out"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out" />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/delete_account"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logout"
+            android:textStyle=""
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/sign_out"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_login_icon"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/the_logout_button" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/delete_account" />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_account"
+            android:textStyle=""
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/delete_account"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:text="@string/delete_account"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_delete_forever_icon"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/delete_account_button" />
+
+    </LinearLayout>
+
 </LinearLayout>
